--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -1,9 +1,64 @@
 {% extends "../base.html" %}
 
-
 {% block content %}
 
-<h1>{{ post.title }}</h1>
-<p>{{ post.content }}</p>
+<main class="container">
 
+    <h1>{{ post.title }}</h1>
+    <p>{{ post.content }}</p>
+
+    <section style="background-color: #eee;">
+        <div class="container my-5 py-5">
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-12 col-lg-10 col-xl-8">
+                    <div class="card">
+                        {% if user.is_authenticated %}
+
+                        <form method="post" class="card card-body">
+                            {% csrf_token %}
+                            <div class="card-footer py-3 border-0" style="background-color: #f8f9fa;">
+                                <div class="d-flex flex-start w-100">
+                                    <div class="form-outline w-100">
+                                        <label class="form-label" for="textAreaExample">Message</label>
+                                        {{ form.content }}
+                                    </div>
+                                </div>
+                                <button class="btn btn-primary btn-sm">Comentar</button>
+                            </div>
+                        </form>
+
+                        <div class="card-body">
+
+                            {% for cmt in comments %}
+                            <div class="card">
+
+                            </div>
+
+                            <div class="d-flex flex-start align-items-center">
+                                <div class="me-3">
+                                    <h6 class="fw-bold text-primary mb-1">{{ cmt.author.username }}</h6>
+                                    <p class="text-muted small mb-0">
+                                        {{ cmt.publication_date }}
+                                    </p>
+                                </div>
+                            </div>
+
+                            <p class="mt-3 mb-4 pb-2">
+                                {{ cmt.content }}
+                            </p>
+                            {% endfor %}
+                        </div>
+
+                        {% else %}
+                        <a href="{% url 'posts:register' %}">Registrase para comentar</a>
+
+                        {% endif %}
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
 {% endblock %}
